--- a/package.json
+++ b/package.json
@@ -20,15 +20,27 @@
     "@angular/platform-browser": "~7.2.9",
     "@angular/platform-browser-dynamic": "~7.2.9",
     "@angular/router": "~7.2.9",
+    "bcrypt": "^3.0.4",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.3.1",
+    "cookie-parser": "^1.4.4",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "ejs": "^2.6.1",
+    "errorhandler": "^1.5.0",
     "express": "^4.16.4",
+    "express-generator": "^4.16.0",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.0",
     "mongoose": "^5.4.19",
+    "morgan": "^1.9.1",
     "node": "^11.11.0",
     "nodemon": "^1.18.10",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rxjs": "^6.4.0",
     "tslib": "^1.9.3",
     "zone.js": "~0.8.29"
