--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.2.9",
     "@angular/platform-browser-dynamic": "~7.2.9",
     "@angular/router": "~7.2.9",
+    "@auth0/angular-jwt": "^2.1.0",
     "bcrypt": "^3.0.4",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
